--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,9 @@ jobs:
       run: |
         echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig.yaml
         export KUBECONFIG=$(pwd)/kubeconfig.yaml
-        kubectl config current-context
         kubectl config use-context aks-backend-cluster
+        kubectl config set-context --current --namespace=default
+        kubectl config current-context
         kubectl get nodes
 
     - name: Validate Kubernetes Context
