--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: raazacr.azurecr.io/restaurant-backend:latest
+        image: raisalacr.azurecr.io/restaurant-backend:latest
         ports:
         - containerPort: 8000
 ---
