--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
   - host: frontend.raazresto.com
     http:
@@ -24,6 +25,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+ingressClassName: nginx
   rules:
   - host: backend.raazresto.com
     http:
