Revert "wait for ingress also changed service from loadbalancer to clusterip"
This reverts commit 97b168ce2330225d3606145b473cccc613994fb8.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,18 +56,15 @@ jobs:
         kubectl apply -f ./k8s/frontend.yaml
         kubectl apply -f ./k8s/backend.yaml
         kubectl apply -f ./k8s/nginx-ingress.yaml
-        kubectl wait --for=condition=available --timeout=600s deployment/ingress-nginx-controller -n ingress-nginx
         kubectl apply -f ./k8s/ingress.yaml
 
-        echo "Now you can access your frontend app at http://frontend.raazresto.com"
-        echo "Now you can access your backend app at http://backend.raazresto.com"
-#        EXTERNAL_IP=$(kubectl get service frontend-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-#        while [ -z "$EXTERNAL_IP" ]; do
-#          echo "Waiting for the external IP to be assigned..."
-#          sleep 10
-#          EXTERNAL_IP=$(kubectl get service frontend-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-#        done
-#
-#        EXTERNAL_PORT=$(kubectl get service frontend-service -o jsonpath='{.spec.ports[0].port}')
-#
-#        echo "Now you can access your frontend app at http://$EXTERNAL_IP:$EXTERNAL_PORT"
+        EXTERNAL_IP=$(kubectl get service frontend-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+        while [ -z "$EXTERNAL_IP" ]; do
+          echo "Waiting for the external IP to be assigned..."
+          sleep 10
+          EXTERNAL_IP=$(kubectl get service frontend-service -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+        done
+
+        EXTERNAL_PORT=$(kubectl get service frontend-service -o jsonpath='{.spec.ports[0].port}')
+
+        echo "Now you can access your frontend app at http://$EXTERNAL_IP:$EXTERNAL_PORT"
