--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,5 +53,4 @@ jobs:
         export KUBECONFIG=$(pwd)/kubeconfig.yaml
         kubectl config use-context aks-backend-cluster
         kubectl get nodes
-        kubectl apply -f ./k8s/argocd-frontend-app.yaml
-        kubectl apply -f ./k8s/argocd-backend-app.yaml
+        kubectl apply -f ./k8s/restaurant-app.yaml
