--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
     # Step 8: Clone the Kubernetes Manifest Repository
     - name: Clone Manifest Repository
       run: |
-        git clone git@github.com:raisalsalim/restaurant-manifests.git manifests-repo
+        git clone https://github.com/raisalsalim/restaurant-manifests.git manifests-repo
         cd manifests-repo
         git checkout main
 
