--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,6 @@ jobs:
         sed -i "s|image: raisalacr.azurecr.io/restaurant-backend:.*|image: raisalacr.azurecr.io/restaurant-backend:${{ github.run_number }}|g" manifests-repo/backend.yaml
         sed -i "s|image: raisalacr.azurecr.io/restaurant-frontend:.*|image: raisalacr.azurecr.io/restaurant-frontend:${{ github.run_number }}|g" manifests-repo/frontend.yaml
 
-    # Step 10: Commit and Push Updated Manifests
     - name: Commit and Push Updated Manifests
       run: |
         cd manifests-repo
@@ -71,4 +70,5 @@ jobs:
         git config --global user.email "actions@github.com"
         git add .
         git commit -m "Update manifests with build number ${{ github.run_number }}"
-        git push origin main
+        git push https://${{ secrets.MANIFESTS_PUSH_TOKEN }}@github.com/raisalsalim/restaurant-manifests.git main
+       
